<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ten_characters.researchAndroid.activities.UploadPaymentActivity"
    android:orientation="vertical"
    android:weightSum="1"
    style="@style/AppTheme.Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight=".85"
        android:orientation="vertical">

        <TextView
            android:id="@+id/payment_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/payment_header"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:textColor="@color/accent_dark_purple"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <EditText
                android:id="@+id/edit_routing_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:inputType="number"
                android:hint="@string/routing_number"
                android:textColor="@color/accent_dark_purple"
                android:textColorHint="@color/main_text_color"/>
            <EditText
                android:id="@+id/edit_account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:inputType="number"
                android:hint="@string/account_number"
                android:textColor="@color/main_text_color"
                android:textColorHint="@color/main_text_color"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/payment_tos_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/read_tos"
            android:textColor="@color/main_text_color"
            />

        <TextView
            android:id="@+id/payment_tos_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/payment_tos"
            style="@style/lowHeaderText"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tos_service_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:text="@string/payment_tos_service_text"
                style="@style/lowHeaderText"
                android:clickable="true"
                android:onClick="onLinkClick"/>
            <TextView
                android:id="@+id/tos_bank_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:text="@string/payment_tos_bank_text"
                style="@style/lowHeaderText"
                android:clickable="true"
                android:onClick="onLinkClick"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/submit_payment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center"
        android:onClick="onButtonClick"
        android:text="@string/payment_submit"
        style="@style/AppTheme.Widget.Button"/>

</LinearLayout>
