<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ten_characters.researchAndroid.activities.ViewShipmentActivity"
    android:orientation="vertical"
    android:weightSum="1"
    style="@style/AppTheme.Activity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp">
        <com.google.android.gms.maps.MapView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            map:liteMode="true"
            map:mapType="normal" />
    </android.support.v7.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view_bol_button"
            android:layout_alignParentTop="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="outsideOverlay">
            <LinearLayout
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/reference_numbers_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/reference_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:padding="4dp"
                        android:text="@string/reference_numbers_header"
                        android:textColor="@color/accent_dark_indigo"
                        android:textSize="24sp"/>
                    <ListView
                        android:id="@+id/reference_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/info_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/info_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_header"
                        android:textColor="@color/accent_dark_indigo"
                        android:textSize="24sp"/>
                    <ListView
                        android:id="@+id/info_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <!-- Will show BOL button if there is one! -->
            </LinearLayout>
        </ScrollView>
        <Button
            android:id="@+id/view_bol_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:text="@string/view_bol_button"
            style="@style/roundedButton"
            android:onClick="onButtonClick"
            />
    </RelativeLayout>

</LinearLayout>
